--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.f49f4df9.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.e8ff76ed.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.994edd85.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5241ebdf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.18518b89.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b245a779.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.10e10fe5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f3018345.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.da6a4e7a.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5f45067b.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.7f5e603d.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_le191s = {
+					__sveltekit_31kuoq = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.994edd85.js"),
-						import("./_app/immutable/entry/app.10e10fe5.js")
+						import("./_app/immutable/entry/start.5241ebdf.js"),
+						import("./_app/immutable/entry/app.da6a4e7a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
