--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.f49f4df9.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.e8ff76ed.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4de59bcb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c693f4b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.18518b89.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8b87cbbf.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d733841a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1a4fa774.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.e51939db.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5f45067b.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.7f5e603d.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
@@ -19,7 +19,7 @@
 
 <div class="app"><main>
 
-<div class="absolute w-screen h-screen grid content-center animate__animated animate__fadeIn animate__slow"><header class="absolute w-screen flex justify-end"><div class="corner svelte-rxmcup"><a href="https://github.com/peikai-tan" class="svelte-rxmcup"><img src="/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-rxmcup"></a></div>
+<div class="absolute w-screen h-screen grid content-center animate__animated animate__fadeIn animate__slow"><header class="absolute w-screen flex justify-end"><div class="corner svelte-rxmcup"><a href="https://github.com/peikai-tan" class="svelte-rxmcup"><img src="/reframe/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-rxmcup"></a></div>
 </header>
 	<div class="absolute" aria-hidden="true"><svg class="chart w-screen h-screen"></svg></div>
 
@@ -36,7 +36,8 @@
 			
 			<script>
 				{
-					__sveltekit_wuzot0 = {
+					__sveltekit_rbm506 = {
+						assets: "/reframe",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -46,8 +47,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4de59bcb.js"),
-						import("./_app/immutable/entry/app.d733841a.js")
+						import("./_app/immutable/entry/start.c693f4b4.js"),
+						import("./_app/immutable/entry/app.e51939db.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
