--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.f49f4df9.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.e8ff76ed.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c693f4b4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.d54545d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.18518b89.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1a4fa774.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.e51939db.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5cc1ebba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fee3e190.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5f45067b.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.7f5e603d.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_rbm506 = {
+					__sveltekit_ogokbh = {
 						assets: "/reframe",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -47,8 +47,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c693f4b4.js"),
-						import("./_app/immutable/entry/app.e51939db.js")
+						import("./_app/immutable/entry/start.d54545d5.js"),
+						import("./_app/immutable/entry/app.fee3e190.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
