--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.2195c436.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.ebd96cd8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.da4127fa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.66f638da.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c634b5a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c40ebfe5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3b2f08a5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.edb5a2fd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f40600c6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.683dd10d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.2281cd40.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.5e824b71.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_12ef21 = {
+					__sveltekit_1v7tph7 = {
 						assets: "/reframe",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -45,8 +45,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.da4127fa.js"),
-						import("./_app/immutable/entry/app.3b2f08a5.js")
+						import("./_app/immutable/entry/start.66f638da.js"),
+						import("./_app/immutable/entry/app.f40600c6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
