--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/0.2195c436.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.ebd96cd8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.18dac8c4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c634b5a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a343034d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ba26d482.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.683dd10d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.d487c074.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
+		<link href="./_app/immutable/assets/0.eb9976eb.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.df71580d.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3b9386e0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.636fa71f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5188c9f5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.d50d6ca5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.60e0d573.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.a9ad9237.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.be3b5c8a.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">
@@ -19,13 +20,16 @@
 
 <div class="app"><main>
 
-<header class="absolute w-screen flex justify-end z-10"><div class="corner svelte-rxmcup"><a href="https://github.com/peikai-tan" class="svelte-rxmcup"><img src="/reframe/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-rxmcup"></a></div>
+<header class="absolute w-screen flex justify-between z-10 variant-soft-surface"><div class="corner px-4 py-1.5 svelte-1d6sh61"><h1 class="text-2xl font-bold sm:text-s">reframe</h1></div>
+	<div class="corner svelte-1d6sh61"><a href="https://github.com/peikai-tan" class="svelte-1d6sh61"><img src="/reframe/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-1d6sh61"></a></div>
 </header>
 <svg class="absolute chart w-screen h-screen" id="animation"></svg>
 
 <div class="absolute w-screen h-screen overflow-hidden" id="results"><div class="mx-auto h-full grid backdrop-blur-xl content-center"><div class="text-center"><h1 class="text-4xl font-bold sm:text-s">reframe</h1>
 				<div class="search pt-2 box-border w-64 mx-auto relative"><form><input class="input h-10 px-5 pr-5 w-64" title="Input (text)" type="text" name="search" placeholder="Search" value="">
-						<button type="submit" class="absolute right-0 top-0 mt-5 mr-4"><svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px"><path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"></path></svg></button></form></div></div></div></div></main>
+						<button type="submit" class="absolute right-0 top-0 mt-5 mr-4"><svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px"><path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"></path></svg></button></form></div></div></div>
+
+	</div></main>
 
 	<footer></footer>
 </div>
@@ -34,7 +38,7 @@
 			
 			<script>
 				{
-					__sveltekit_6bhilv = {
+					__sveltekit_182x4xj = {
 						assets: "/reframe",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -45,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.18dac8c4.js"),
-						import("./_app/immutable/entry/app.ba26d482.js")
+						import("./_app/immutable/entry/start.3b9386e0.js"),
+						import("./_app/immutable/entry/app.60e0d573.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
