--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.eb9976eb.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.df71580d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3b9386e0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b587f505.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.636fa71f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5188c9f5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.86489937.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.d50d6ca5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.60e0d573.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fea98e03.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.a9ad9237.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.be3b5c8a.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.2970ed17.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">
@@ -38,7 +38,7 @@
 			
 			<script>
 				{
-					__sveltekit_182x4xj = {
+					__sveltekit_zyiv0 = {
 						assets: "/reframe",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -49,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3b9386e0.js"),
-						import("./_app/immutable/entry/app.60e0d573.js")
+						import("./_app/immutable/entry/start.b587f505.js"),
+						import("./_app/immutable/entry/app.fea98e03.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
