--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.11591421.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.df71580d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.297565ef.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e64279e2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.636fa71f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.463aad12.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c26d2865.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.d50d6ca5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.97a7283f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1a959377.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.25a67219.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.16481bcb.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.883c21b1.js"><title>reframe</title><!-- HEAD_svelte-1smjn59_START --><meta name="description" content="reframe"><!-- HEAD_svelte-1smjn59_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">
@@ -20,7 +20,7 @@
 
 <div class="app"><main>
 
-<header class="absolute w-screen flex justify-between z-10 variant-soft-surface"><div class="px-4 py-1.5"><a href="/reframe"><h1 class="text-2xl font-bold sm:text-s">reframe</h1></a></div>
+<header class="absolute w-screen flex justify-between z-10 variant-soft-surface"><div class="px-4 py-1.5"><a href="https://peikai-tan.github.io/reframe"><h1 class="text-2xl font-bold sm:text-s">reframe</h1></a></div>
 	<div class="corner svelte-1d6sh61"><a href="https://github.com/peikai-tan" class="svelte-1d6sh61"><img src="/reframe/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-1d6sh61"></a></div>
 </header>
 <svg class="absolute chart w-screen h-screen" id="animation"></svg>
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ondfwb = {
+					__sveltekit_15kq2s2 = {
 						assets: "/reframe",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.297565ef.js"),
-						import("./_app/immutable/entry/app.97a7283f.js")
+						import("./_app/immutable/entry/start.e64279e2.js"),
+						import("./_app/immutable/entry/app.1a959377.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
